--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ HOW ARE YOU)
             <div class="wrap">
                 <a href="#about-me" class="scrolling">About Me</a>
                 <a href="#portfolio" class="scrolling">Portfolio</a>
-                <a href="#my-friends" class="scrolling">My Friends</a>
+                <a href="#my-friends" class="scrolling">My Films</a>
                 <a href="#favorite-music" class="scrolling">Favorite Music</a>
                 <a href="#favorite-films" class="scrolling">Favorite Films</a>
             </div>
