--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@ HOW ARE YOU)
     <script src="assets/scripts/jquery.js"></script>
     <script src="assets/slick/slick.min.js"></script>
     <script src="assets/scripts/ibg.js"></script>
+    <script src="assets/scripts/imagesLoaded.js"></script>
     <script src="assets/scripts/masonry.js"></script>
     <script src="assets/scripts/main.js"></script>
 </body>
